--- a/flyhighblog/static/css/post-style.css
+++ b/flyhighblog/static/css/post-style.css
@@ -86,6 +86,8 @@
     white-space: break-spaces;
     text-align: justify;
     text-align-last: left;
+    -webkit-text-align-last: left;
     -moz-text-align-last: left;
     -ms-text-align-last: left;
+    -o-text-align-last: left;
 }
